--- a/frontend/style.css
+++ b/frontend/style.css
@@ -402,6 +402,6 @@ body::before {
     background-color: transparent !important;
 }
 
-.card-body .btn-group {
-    z-index: 10;
+.dropdown-menu {
+    z-index: 1060;
 }
